--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Rubik&display=swap" rel="stylesheet">
     <title>Core UI Template</title>
   </head>
   <body>
